Borderless Window + Twitch Color Palette

--- a/client/src/main.less
+++ b/client/src/main.less
@@ -1,3 +1,10 @@
 .less-placeholder {
   color: #0000ff;
 }
+
+.no-drag {
+  -webkit-app-region: no-drag;
+}
+
+// Main Color: 6441A5 || (100, 65, 165)
+// Alt Color:  A68ED2 || (166, 142, 210))
