--- a/client/src/main.less
+++ b/client/src/main.less
@@ -2,6 +2,21 @@
   color: #0000ff;
 }
 
+.header {
+  .logo {
+    height: 48px;
+  }
+  .app-name {
+    margin: 0;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    font-size: 8px;
+  }
+}
+
 .no-drag {
   -webkit-app-region: no-drag;
 }
