--- a/client/src/main.less
+++ b/client/src/main.less
@@ -4,16 +4,17 @@
 
 .header {
   .logo {
-    height: 48px;
+    height: 40px;
+    background-color: transparent;
   }
   .app-name {
     margin: 0;
     position: absolute;
-    top: 25%;
+    top: 18%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    font-size: 8px;
+    font-size: 15px;
   }
 }
 
