Twitch login is now required

--- a/client/src/main.less
+++ b/client/src/main.less
@@ -1,5 +1,13 @@
+body {
+  border: 1px solid #666;
+//  border-bottom: none;
+}
+
 .less-placeholder {
   color: #0000ff;
+}
+
+.main-content {
 }
 
 .header {
