Material palette gen completed(basically) and random palette on load

--- a/client/src/views/home.html
+++ b/client/src/views/home.html
@@ -1,3 +1,8 @@
 <md-button ng-click="toggleLeft()">
   Open Left Menu
 </md-button>
+<div>
+    <md-button class="md-raised md-primary md-hue-1">Hue 1</md-button> <!-- Hue 1 = palette# 300 | 121, 134, 203  | 7986CB-->
+    <md-button class="md-raised md-primary md-hue-2">Hue 2</md-button> <!-- Hue 2 = palette# 800 | 40, 53, 147    | 283593-->
+    <md-button class="md-raised md-primary md-hue-3">Hue 3</md-button> <!-- Hue 3 = palette# A100 | 140, 158, 255 | 8C9EFF-->
+</div>
